src/objects/FF_Integration_Log__c.object
<CustomObject>
    <description>Contains various integration logs</description>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debug_Message__c</fullName>
        <label>Debug Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FF_Staging_Billing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optional staging record associated to this log message</description>
        <label>FF Staging - Billing</label>
        <referenceTo>FF_Staging_Billing__c</referenceTo>
        <relationshipLabel>FF Integration Logs</relationshipLabel>
        <relationshipName>FF_Integration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FF_Staging_Expenses__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optional staging record associated to this log message</description>
        <label>FF Staging - Expenses</label>
        <referenceTo>FF_Staging_Expenses__c</referenceTo>
        <relationshipLabel>FF Integration Logs</relationshipLabel>
        <relationshipName>FF_Integration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FF_Staging_Forex__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optional staging record associated to this log message</description>
        <label>FF Staging - Forex</label>
        <referenceTo>FF_Staging_Forex__c</referenceTo>
        <relationshipLabel>FF Integration Logs</relationshipLabel>
        <relationshipName>FF_Integration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FF_Staging_Time_Off_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optional staging record associated to this log message</description>
        <label>FF Staging - Time Off Request</label>
        <referenceTo>FF_Staging_Time_Off_Request__c</referenceTo>
        <relationshipLabel>FF Integration Logs</relationshipLabel>
        <relationshipName>FF_Integration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Log message</description>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <description>The id of the related staging record</description>
        <inlineHelpText>The id of the related staging record</inlineHelpText>
        <label>Reference Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>FF Integration Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Category__c</columns>
        <columns>Reference_Id__c</columns>
        <columns>Type__c</columns>
        <columns>Message__c</columns>
        <columns>Debug_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Time_Off_Request_Errors</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>FF_Staging_Time_Off_Request__c</columns>
        <columns>Type__c</columns>
        <columns>Message__c</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FF_Staging_Time_Off_Request__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Time Off Request Errors</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FIL-{00000}</displayFormat>
        <label>FF Integration Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FF Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>